syntax = "proto3";

option csharp_namespace = "Service.Grpc";

package profiler_service;

service ProfilerService {
	rpc GetByDiscordId (GetByDiscordIdRequest)
	returns (GetByDiscordIdResponse);

	rpc GetRangeOfProfiles (GetRangeOfProfilesRequest)
	returns (GetRangeOfProfilesResponse);

	rpc CreateProfile (CreateProfileRequest) 
	returns (CreateProfileResponse);

	rpc DeleteUser (DeleteUserRequest)
	returns (DeleteUserResponse);

	rpc DepositPoints (DepositPointsRequest)
	returns (DepositPointsResponse);

	rpc WithdrawPoints (WithdrawPointsRequest)
	returns (WithdrawPointsResponse);

	rpc VerifyWaxWallet (VerifyWaxWalletRequest)
	returns (VerifyWaxWalletResponse);
}

message GetByDiscordIdRequest {
	uint64 discord_id = 1;
}

message GetRangeOfProfilesRequest {
	int32 page = 1;
	int32 page_size = 2;
}

message CreateProfileRequest {
	uint64 discord_id = 1;
}

message DeleteUserRequest {
	uint64 discord_id = 1;
}

message DepositPointsRequest {
	uint64 discord_id = 1;
	int32 pointsAmount = 2;
}

message WithdrawPointsRequest {
	uint64 discord_id = 1;
	int32 pointsAmount = 2;
}

message VerifyWaxWalletRequest {
	Profile profile = 1;
}

message GetByDiscordIdResponse {
	Profile profile = 1;
}

// todo refactory
message GetRangeOfProfilesResponse {
	repeated Profile profiles = 1;
}

message CreateProfileResponse {
}

message DeleteUserResponse {
}

message DepositPointsResponse {
	StatusType status = 1;
}

message WithdrawPointsResponse {
	StatusType status = 1;
}

message VerifyWaxWalletResponse {
	StatusType status = 1;
}

enum StatusType {
	STATUS_TYPE_UNSPECIFIED = 0;
	STATUS_TYPE_SUCCESS = 1;
	STATUS_TYPE_FAILED = 2;
}

message Profile {
	string id = 1;
	uint64 discord_id = 2;
	string wax_wallet = 3;
	int32 pointsAmount = 4;
	uint32 win_count = 5; 
	uint32 lose_count = 6; 
	string creation_date = 7;
}